[package]
name = "p10-led-panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-core = "0.4"
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }

[features]
async = ["dep:embedded-hal-async"]
